--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
                     <div class="timeline-item">
                       <span class="date">2014-2017</span>
                       <h4>Archana hindi pathshala school - <span> Surat - guj.</span></h4>
-                      <p>10th / 55.00%</p>
-                      <p>12th / 50.00% / Commerce </p>
+                      <p>10th </p>
+                      <p>12th / Commerce </p>
                     </div>
                     <div class="timeline-item">
                       <span class="date">2017-2018</span>
