--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <!--  Experience ENd -->
 
                 <a href="cv.pdf" target="_blank" class="btn"> Download CV</a>
-                <a href="#Contact" class="btn link-item"> Contect me</a>
+                <a href="#Contact" class="btn link-item"> Contact me</a>
 
                </div>
         </div>
