--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
         <div class="home-img">
           <div class="home-box">
-            <img src="img/profile-img.png" alt="profile-img">
+            <img src="img/profile-img.jpeg" alt="profile-img">
           </div>
         </div>
       </div>
