--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 </div>
                 <!--  Experience ENd -->
 
-                <a href="cv.pdf" target="_blank" class="btn"> Download CV</a>
+                <a href="CV.pdf" target="_blank" class="btn"> Download CV</a>
                 <a href="#Contact" class="btn link-item"> Contact me</a>
 
                </div>
