--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="home-text">
           <p>Hello, I'm</p>
           <h1>Narpat Rajpurohit</h1>
-          <h2>Frontend/Backend web developer</h2>
+          <h2>full stack web developer</h2>
           <a href="#About" class="btn link-item"> More about me</a>
           <a href="#Portfolio" class="btn link-item"> Explore work</a>
 
