--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       <div class="container">
         <div class="row">
           <div class="section-title">
-            <h2> React Work</h2>
+            <h2> Explore In Work</h2>
           </div>
         </div>
         <div class="row">
